# prisma-client-py

./: .gitignore  tox.ini
examples/models/: main.py  schema.prisma
requirements/: dev.txt
src/query-engine/: Cargo.toml
src/query-engine/src/: engine.rs  logger.rs
src/query-engine/src/logger/: channel.rs
tests/: test_binaries.py  test_client.py  test_misc.py
tests/test_types/: test_bytes.py
