[package]
name = "prisma-py-query-engine"
version = "0.0.2"
edition = "2021"
authors = ["Robert Craigie <robert@craigie.dev>"]

[lib]
name = "_prisma_query_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
query-core = { git = "https://github.com/prisma/prisma-engines" }
pyo3-asyncio = { git = "https://github.com/awestlake87/pyo3-asyncio", features = ["attributes", "tokio-runtime"] }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
query-connector = { git = "https://github.com/prisma/prisma-engines" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines" }
datamodel = { git = "https://github.com/prisma/prisma-engines" }
sql-connector = { git = "https://github.com/prisma/prisma-engines", package = "sql-query-connector" }
prisma-models = { git = "https://github.com/prisma/prisma-engines"  }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines" }
quaint = { git = "https://github.com/prisma/quaint", features = ["fmt-sql"] }

url = "2.2.2"
serde = "1.0.137"
connection-string = "0.1.14"
tokio = { version = "1.19.2", features = ["sync"] }
serde_json = { version = "1.0.81", features = ["preserve_order", "float_roundtrip"] }
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-opentelemetry = "0.17.3"
thiserror = "1.0.31"
opentelemetry = "0.17.0"
opentelemetry-otlp = { version = "0.10.0", features = ["tls", "tls-roots"] }
crossbeam-channel = "0.5.5"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]
